--- a/gdb/doc/ChangeLog
+++ b/gdb/doc/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-24  Pedro Alves  <palves@redhat.com>
+
+	* gdb.texinfo (Starting): Document set/show startup-with-shell.
+
 2013-04-12  Jan Kratochvil  <jan.kratochvil@redhat.com>
 	    Eli Zaretskii  <eliz@gnu.org>
 
