--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,10 @@
+2013-12-28  Sergio Durigan Junior  <sergiodj@redhat.com>
+
+	* arm-linux-tdep.c (arm_stap_is_single_operand): Accept "$" as a
+	literal prefix.  Also accept no prefix at all.
+	(arm_stap_parse_special_token): Likewise.
+	(arm_linux_init_abi): Likewise.
+
 2013-09-24  Andreas Arnez  <arnez@linux.vnet.ibm.com>
 
 	* solib-svr4.c (svr4_read_so_list): Skip the vDSO when reading 
