--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2014-05-22  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
+
+	* aarch64-linux-nat.c (asm/ptrace.h): Include.
+
 2013-03-21  Tom Tromey  <tromey@redhat.com>
 
 	* symfile.c (alloc_section_addr_info): Update header.  Don't set
